# xagent

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  agent.md  docker-compose.yml  nixpacks.toml  package.json  pyproject.toml  requirements.txt
extensions/x-twitter/: index.mjs  openclaw.plugin.json  package-lock.json  package.json
extensions/x-twitter/lib/: agent-runtime.mjs  oauth.mjs  onchain-skill.mjs  openai.mjs  router.mjs  state-store.mjs  twitter-api.mjs  utils.mjs
openclaw/: openclaw.json.example
scripts/: start-openclaw.sh
skills/on-chain-wizard/: SKILL.md
skills/on-chain-wizard/scripts/: run_onchain_analysis.mjs  run_onchain_analysis.py
skills/xagent-tool-layer/: SKILL.md
skills/xagent-tool-layer/scripts/: run_xagent_tool.py
src/x_mentions_agent/: agent.py  analysis_client.py  config.py  llm_client.py  logging_config.py  main.py  onchain_analysis_client.py  openclaw_client.py  state.py  twitter_client.py
tests/: onchain_skill.test.mjs  test_agent_routing.py  test_llm_client.py  x_twitter_oauth.test.mjs  x_twitter_runtime.test.mjs
